[package]
name = "membuffer"
version = "0.1.1"
authors = ["Alexander Leonhardt <equinox.salexander@gmail.com>"]
edition = "2018"
description = "A very fast flat memory buffer used to deserialize at a fast speed"
repository = "https://github.com/ShadowItaly/membuffer"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bench = []

[dependencies]
byteorder = "1.4.2"
crc32fast = "1.2.1"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
