[package]
name = "membuffer"
version = "0.3.0"
authors = ["Alexander Leonhardt <equinox.salexander@gmail.com>"]
edition = "2018"
description = "A very fast flat memory buffer used to deserialize at a fast speed"
repository = "https://github.com/ShadowItaly/membuffer"
readme = "README.md"
documentation = "https://docs.rs/membuffer/0.3.0/membuffer/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bench = []

[dependencies]
byteorder = "1.4.2"
serde = {version="1.0", features=["derive"]}
bincode = "1.3.1"
